Corrected navbar dropdown hiding behind form

--- a/app/dashboard/form/FormPage.module.css
+++ b/app/dashboard/form/FormPage.module.css
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(228, 233, 255);
+    position: relative;
+    z-index: -99;
 }
 
 .portfolioForm {
